--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>se.callistaenterprise.goblog</groupId>
+	<groupId>loadtest</groupId>
 	<artifactId>loadtest</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<gatling.version>2.1.7</gatling.version>
-		<gatling-plugin.version>2.1.7</gatling-plugin.version>
+		<gatling.version>2.3.1</gatling.version>
+		<gatling-plugin.version>2.2.4</gatling-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -27,7 +27,7 @@
 				<artifactId>gatling-maven-plugin</artifactId>
 				<version>${gatling-plugin.version}</version>
                 <configuration>
-                  <simulationClass>${simulationClass}</simulationClass>
+                  <simulationClass>loadtest.LoadTest</simulationClass>
                   <jvmArgs>
                   	<jvmArg>-Dusers=1</jvmArg>
                   	<jvmArg>-DbaseUrl=http://localhost:6767</jvmArg>
