Supporting simulation name as mvn argument.

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 	<properties>
 		<gatling.version>2.3.1</gatling.version>
 		<gatling-plugin.version>2.2.4</gatling-plugin.version>
+		<gatling.simulations.package>loadtest</gatling.simulations.package>
+		<gatling.simulation.name>LoadTest</gatling.simulation.name>
 	</properties>
 
 	<dependencies>
@@ -27,7 +29,7 @@
 				<artifactId>gatling-maven-plugin</artifactId>
 				<version>${gatling-plugin.version}</version>
                 <configuration>
-                  <simulationClass>loadtest.LoadTest</simulationClass>
+                  <simulationClass>${gatling.simulations.package}.${gatling.simulation.name}</simulationClass>
                   <jvmArgs>
                   	<jvmArg>-Dusers=1</jvmArg>
                   	<jvmArg>-DbaseUrl=http://localhost:6767</jvmArg>
